# diff_robot_ws

./: Dockerfile  README.md  docker-compose.yaml
DynamixelSDK/dynamixel_sdk_custom_interfaces/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_examples/: CMakeLists.txt
DynamixelSDK/dynamixel_sdk_examples/include/: dynamixel_velocity_interface.hpp
DynamixelSDK/dynamixel_sdk_examples/src/: dynamixel_velocity_interface.cpp  read_write_node.cpp
custom_interfaces/: CMakeLists.txt
diff_robot_localization/: CMakeLists.txt  package.xml
diff_robot_localization/config/: ekf_params.yaml
diff_robot_localization/launch/: ekf.launch.py
jetbot-ros-control/bringup/config/: jetbot_controllers.yaml
joystick_reader/: package.xml  setup.py
joystick_reader/joystick_reader/: joystick_node.py
motor_control/: CMakeLists.txt  package.xml
motor_control/include/motor_control/: i2c_device.hpp  motor.hpp  motor_control.hpp  odometry.hpp
motor_control/src/: i2c_device.cpp  motor.cpp  motor_control.cpp  my_motor_control.cpp  odometry.cpp
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/launch/: full_bringup.launch.py  robot_bringup.launch.py  sensors.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/: controller_position.yaml
robot_description/launch/: robot_xacro.launch.py
robot_description/rviz/: robot_urdf_vis.rviz
robot_description/urdf/: robot.gazebo.xacro  robot.xacro
robot_navigation/: package.xml  setup.cfg  setup.py
robot_navigation/config/: demo_waypoints.yaml  gps_wpf_demo.mvc  mapper_params_online_async.yaml  nav2_no_map_params.yaml  nav2_no_map_params_MPPI_old.yaml  nav2_no_map_params_PP.yaml  nav2_no_map_params_TEB.yaml
robot_navigation/launch/: gps_waypoint_follower.launch.py  mapviz.launch.py
robot_navigation/robot_navigation/: gps_waypoint_logger.py  interactive_waypoint_follower.py  logged_waypoint_follower_.py  mav_through_poses1.py  nav_through_poses.py
twist_mux/: package.xml
twist_mux/config/: twist_mux_topics.yaml
twist_mux/launch/: twist_mux_launch.py
(+2 files in other folders)
